[perf][mem] add reclaim changes
MIUI-2088898

1.[perf][mem] reclaim pages[3/5]
2.[perf][mem] reclaim Bservice and cached APP[2/3]
3.perf:stop process reclaiming if the task is dying.
4.perf:stop reclaiming when lock race

Change-Id: I564b8bf5d8a40de6b2fee9044adae81045e17585
Signed-off-by: wangbenjian <wangbenjian@xiaomi.com>

--- a/arch/arm64/configs/selene_debug_defconfig
+++ b/arch/arm64/configs/selene_debug_defconfig
@@ -517,7 +517,7 @@ CONFIG_CPU_THERMAL=y
 # Huaqin add for HQ-123513 by liunianliang at 2021/04/25 start
 CONFIG_SWTP_DRIVER_SELENE=y
 # Huaqin add for HQ-123513 by liunianliang at 2021/04/25 end
-CONFIG_RTMM=y
+CONFIG_PROCESS_RECLAIM=y
 # Huaqin add for HQ-124138 by liunianliang at 2021/04/29 start
 CONFIG_MI_ERRFLAG_ESD_CHECK_ENABLE=y
 # Huaqin add for HQ-124138 by liunianliang at 2021/04/29 end
