--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -134,12 +134,14 @@ CONFIG_CUSTOM_KERNEL_GMRV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_RV_SENSOR=y
 CONFIG_CUSTOM_KERNEL_LINEARACCEL_SENSOR=y
 CONFIG_CUSTOM_KERNEL_GRAVITY_SENSOR=y
+#Huaqin modify for HQ-146806 by baoguangxiu at 2021.7.19 start
 CONFIG_CUSTOM_KERNEL_UNCALI_ACC_SENSOR=y
-CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR=y
-CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
-CONFIG_MTK_UNCALI_MAGHUB=y
-CONFIG_MTK_UNCALI_GYROHUB=y
+#CONFIG_CUSTOM_KERNEL_UNCALI_GYRO_SENSOR=y
+#CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
+#CONFIG_MTK_UNCALI_MAGHUB=y
+#CONFIG_MTK_UNCALI_GYROHUB=y
 CONFIG_MTK_UNCALI_ACCHUB=y
+#Huaqin modify for HQ-146806 by baoguangxiu at 2021.7.19 end
 CONFIG_CUSTOM_KERNEL_STEP_COUNTER=y
 CONFIG_MTK_STEPSIGNHUB=y
 CONFIG_CUSTOM_KERNEL_SITUATION=y
