[HQ-145867]{type:BSP System;pro:K19A}P56 patch导致VTS testVerifyOverlay fail[1/1]
[Problem]
P56 patch在lk中使用spislv_write_param_to_dt复写了dts中的一些参数,导致VTS检测dtbo fail

[Solution]
修改selene.dts保持和lk中传参一致

[Test]
pass

[Comment]
N/A

[波及范围]
NA

Change-Id: I8f4f16ce50a5805d23a041012e7cfc83cf749faa

--- a/arch/arm64/boot/dts/mediatek/selene.dts
+++ b/arch/arm64/boot/dts/mediatek/selene.dts
@@ -804,18 +804,20 @@
 	mediatek,kthread-rt = <1>;
 /* Huaqin add for HQ-131657 by liunianliang at 2021/06/03 end */
 
+/* Huaqin modify for HQ-145867 by liunianliang at 2021/07/21 start */
 	spislv@0 {
 		compatible = "mediatek,spi_slave";
 		reg = <0>;
 		spi-max-frequency = <55000000>;
 		spi-tx-bus-width = <1>;
 		spi-rx-bus-width = <1>;
-		low-speed-tick-delay = /bits/ 8 <1>;
+		low-speed-tick-delay = /bits/ 8 <4>;
 		low-speed-early-trans = /bits/ 8 <0>;
-		high-speed-tick-delay = /bits/ 8 <1>;
-		high-speed-early-trans = /bits/ 8 <1>;
+		high-speed-tick-delay = /bits/ 8 <2>;
+		high-speed-early-trans = /bits/ 8 <0>;
 		slave-drive-strength = /bits/ 8 <3>;
 	};
+/* Huaqin modify for HQ-145867 by liunianliang at 2021/07/21 end */
 };
 &pio {
 	spislv_pins_default: spislv_mode_default {
