[HQ-147450]{type:LCD;pro:K19A}【K19A】【Bringup】【TP】【实现】TP点亮--三供[1/2]
[Problem]
三供TP导入

[Solution]
Add FT8720M

[Test]
pass

[Comment]
N/A

[波及范围]
NA

Change-Id: I7d316dc9369343e05d17cd85face3552a3ff6963

--- a/arch/arm64/configs/selene_debug_defconfig
+++ b/arch/arm64/configs/selene_debug_defconfig
@@ -272,6 +272,9 @@ CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 #K19A code for HQ-131648 by feiwen at 2021.4.27 end
 CONFIG_TOUCHSCREEN_MTK=y
 CONFIG_TOUCHSCREEN_NT36672C=y
+# Huaqin add for HQ-147450 by feiwen at 2021/7/23 start
+CONFIG_TOUCHSCREEN_FTS_XIAOMI=y
+# Huaqin add for HQ-147450 by feiwen at 2021/7/23 end
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_SERIO is not set
@@ -470,7 +473,9 @@ CONFIG_HQ_SYSFS_SUPPORT=y
 #CONFIG_TOUCHSCREEN_MTK_NT36672=y
 CONFIG_MTK_IRTX_SUPPORT=y
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
-CONFIG_TOUCHSCREEN_MTK_FT8719P=y
+# Huaqin add for HQ-147450 by feiwen at 2021/7/23 start
+# CONFIG_TOUCHSCREEN_MTK_FT8719P=y
+# Huaqin add for HQ-147450 by feiwen at 2021/7/23 end
 CONFIG_MMC_FFU=y
 CONFIG_SERIAL_NUM=y
 CONFIG_SIMTRAY_STATUS=y
