[HQ-147511]{type:modify; pro:K19S}sar sensor 兼容K19A与K19S [1/2]
[Problem]
sar bringup

[Solution]
修改i2c number

[Test]
pass

[Comment]
NA

Change-Id: Ia936fefc5639b31d6fddb18b32db199783bb5b73
(cherry picked from commit defe31c3e31b154398a2fdf772407ace0dce7848)

--- a/arch/arm64/boot/dts/mediatek/eos.dts
+++ b/arch/arm64/boot/dts/mediatek/eos.dts
@@ -169,10 +169,10 @@
 	};
 };
 /* flashlight end*/
-
+/*Huaqin modify for HQ-147511 by baoguangxiu at 2021.8.4 start*/
 &i2c3 {
-	status = "okay";
-	nxp@28 {
+	status = "disable";
+	/*nxp@28 {
 		compatible = "nq-nci";
 		reg = <0x28>;
 		nq-irq = <&pio 9 0x00>;
@@ -183,10 +183,10 @@
 		nq-clkreq = <&pio 11 0x0>;
 		//nq-esepwr = <&tlmm 42 0x00>;
 		interrupt-names = "irq_nfc";
-	};
+	};*/
 
 };
-
+/*Huaqin modify for HQ-147511 by baoguangxiu at 2021.8.4 end*/
 /* add goodix fingerprint start*/
 
 &spi2 {
