[K19]Scheduler: boost vip task in none-migt
MIUIROM-183420

Boost vip task by user interface

Change-Id: I7b1d5d46c1af7172239fbce835bf82a38f83bf42
Signed-off-by: jingyiming <jingyiming@xiaomi.com>
Signed-off-by: yinqiangqiang <yinqiangqiang@xiaomi.com>

--- a/arch/arm64/configs/selene_debug_defconfig
+++ b/arch/arm64/configs/selene_debug_defconfig
@@ -69,6 +69,8 @@ CONFIG_ARCH_MTK_PROJECT="selene"
 #CONFIG_MTK_AB_OTA_UPDATER is not set
 CONFIG_MTK_ENG_BUILD=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
+CONFIG_MIHW=y
+CONFIG_MIGT=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 CONFIG_MTK_PMIC_CHIP_MT6358=y
