--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -117,6 +117,8 @@ CONFIG_MTK_AAL_SUPPORT=y
 CONFIG_MTK_CCU=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSOR_ARCHITECTURE="1.0"
+CONFIG_MIHW=y
+CONFIG_MIGT=y
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 CONFIG_MTK_ACCELHUB=y
 CONFIG_CUSTOM_KERNEL_ALSPS=y
