[HQ-152282]{type:TP; pro:K19S]TP主二供ITO门限值[1/1]
[Problem]
TP主二供ITO门限值

[Solution]
导入新ITO门限值

[Test]
Pass

[Comment]
NA

Change-Id: Ic4304b91f9540e8b7d1bab1281ffe1027932ee77
(cherry picked from commit a4a722a9e8c7e1f4671401796aec996040ead5f5)

--- a/arch/arm64/boot/dts/mediatek/eos.dts
+++ b/arch/arm64/boot/dts/mediatek/eos.dts
@@ -16,7 +16,9 @@
 #include <dt-bindings/interrupt-controller/irq.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/pinctrl/mt6768-pinfunc.h>
-#include "mediatek/cust_mt6768_touch_1080x2400.dtsi"
+/* Huaqin modify for HQ-152282 by zhangjiangbin at 2021/08/24 start */
+#include "mediatek/cust_mt6768_touch_eos_1080x2400.dtsi"
+/* Huaqin modify for HQ-152282 by zhangjiangbin at 2021/08/24 end */
 
 &reserved_memory {
 	reserve-memory-scp_share {
