[HQ-166871]{type:charger; pro:K19S}58度停充，以达到60度不充电的效果[1/1]
[Problem]
60度无法停止充电

[Solution]
在58度时停止充电

[Test]
验证pass

[Comment]
k19a/k19s都上，暂时先上native

Change-Id: Ia7ade251d41fb78cfee08cbebf7a5907563840fb
(cherry picked from commit 7c362087cef5de591b56dde24e0bf02839f5fb5e)

--- a/arch/arm64/boot/dts/mediatek/selene.dts
+++ b/arch/arm64/boot/dts/mediatek/selene.dts
@@ -549,7 +549,9 @@
 	/*K19A HQHW-1022 K19A for JEITA  by langjunjun at 2021/7/15 end*/
 
 	temp_t4_thres = <60>;
-	temp_t4_thres_minus_x_degree = <60>;
+        /*HQ-166871 code for K19u by wanglicheng at 20211210 end */
+	temp_t4_thres_minus_x_degree = <58>;
+        /*HQ-166871  code for K19u by wanglicheng at 20211210 start */
 	temp_t3_thres = <48>;
 	temp_t3_thres_minus_x_degree = <48>;
 	temp_t2_thres = <10>;
