[Performance] set value of CONFIG_MTK_MET_MEM_ALLOC to 2 for reducing memory.
HQ-167608

Change-Id: I29c0a54542ed51ea6cee022faaf77b04c284975c
Signed-off-by: luwei9 <luwei9@xiaomi.com>

--- a/arch/arm64/configs/selene_debug_defconfig
+++ b/arch/arm64/configs/selene_debug_defconfig
@@ -475,6 +475,7 @@ CONFIG_KTD3136_SUPPORT=y
 CONFIG_LM3697_SUPPORT=y
 CONFIG_MFD_TI_LMU=y
 CONFIG_TASK_DELAY_ACCT=y
+CONFIG_MTK_MET_MEM_ALLOC=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_HQ_SYSFS_SUPPORT=y
 #CONFIG_TOUCHSCREEN_MTK_NT36672=y
