--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -451,6 +451,7 @@ CONFIG_LM3697_SUPPORT=y
 CONFIG_MFD_TI_LMU=y
 CONFIG_MICROTRUST_TEE_SUPPORT=y
 CONFIG_TASK_DELAY_ACCT=y
+CONFIG_MTK_MET_MEM_ALLOC=y
 # CONFIG_CRYPTO_HW is not set
 CONFIG_MTK_IRTX_SUPPORT=y
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
